# delivery-microservice-chat

./: .dockerignore  .env-example  .gitignore  Dockerfile  Makefile  pyproject.toml
.github/: main.yml
.github/workflows/: main.yml
app/application/api/: main.py
app/application/api/messages/: handlers.py  schemas.py
app/domain/: exceptions.py
app/domain/entities/: base.py  messages.py
app/domain/events/: base.py  messages.py
app/domain/exceptions/: chats.py  message.py
app/domain/values/: base.py  messages.py
app/infrastucture/repositories/: messages.py
app/infrastucture/repositories/messages/: base.py  converters.py  memory.py  mongo.py
app/logic/: container.py  dependecies.py  mediator.py
app/logic/commands/: messages.py
app/logic/events/: base.py  messages.py
app/logic/exceptions/: base.py  mediator.py  messages.py
app/settings/: config.py
app/tests/: conftest.py
app/tests/application/api/: conftest.py  test_messages.py
app/tests/domain/values/: conftest.py  test_messages.py
app/tests/logic/: conftest.py  test_messages.py
docker_compose/: app.yml  storages.yml
