[tool.poetry]
name = "microservice-chat"
version = "0.1.0"
description = ""
authors = ["c3equalz <dan.kovalev2013@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
