[tool.poetry]
name = "microservice-chat"
version = "0.1.0"
description = ""
authors = ["c3equalz <dan.kovalev2013@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.31.1"
pydantic-settings = "^2.5.2"
punq = "^0.7.0"
fastapi-versioning = "^0.10.0"
motor = "^3.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mimesis = "^18.0.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
